[gd_scene load_steps=2 format=2]

[ext_resource path="res://License.gd" type="Script" id=1]

[node name="License" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -352, -160 )
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VB"]
margin_right = 500.0
margin_bottom = 14.0
text = "Onetun not found, do you want to download it?"

[node name="License" type="TextEdit" parent="VB"]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 476.0
size_flags_vertical = 3
readonly = true

[node name="HB" type="HBoxContainer" parent="VB"]
margin_top = 480.0
margin_right = 500.0
margin_bottom = 500.0

[node name="Yes" type="Button" parent="VB/HB"]
margin_right = 141.0
margin_bottom = 20.0
text = "Agree and download"

[node name="C" type="Control" parent="VB/HB"]
margin_left = 145.0
margin_right = 442.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="No" type="Button" parent="VB/HB"]
margin_left = 446.0
margin_right = 500.0
margin_bottom = 20.0
text = "Cancel"

[node name="LicenseDownload" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VB/HB/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="VB/HB/No" to="." method="_on_No_pressed"]
[connection signal="request_completed" from="LicenseDownload" to="." method="_on_LicenseDownload_request_completed"]
